--- a/Python_Practice_Feb-2024.ipynb
+++ b/Python_Practice_Feb-2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "52e70218",
+   "id": "d502cbd9",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "67f7b039",
+   "id": "549b05ee",
    "metadata": {},
    "outputs": [
     {
@@ -38,11 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "44613226",
+   "execution_count": 6,
+   "id": "bcc7f8ff",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning Python Zero to Hero !!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Learning Python Zero to Hero !!!\")"
+   ]
   }
  ],
  "metadata": {
