--- a/Practice-2024/fundamentals.ipynb
+++ b/Practice-2024/fundamentals.ipynb
@@ -67,7 +67,7 @@
    "id": "0ba933dc",
    "metadata": {},
    "source": [
-    "### whilelLoop"
+    "### whilel loop"
    ]
   },
   {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "3de0920c",
    "metadata": {},
    "outputs": [
@@ -178,6 +178,7 @@
    ],
    "source": [
     "# for loop - list of lists\n",
+    "\n",
     "house = [[\"hallway\", 11.25], \n",
     "         [\"kitchen\", 18.0], \n",
     "         [\"living room\", 20.0], \n",
@@ -188,6 +189,33 @@
     "for x in house :\n",
     "    print(\"the \" + x[0] + \" is \" + str(x[1]) + \" sqm\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f1dca07e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for loop with DataFrame 1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4f50a46",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc1a8e7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
