--- a/Practice-2024/fundamentals.ipynb
+++ b/Practice-2024/fundamentals.ipynb
@@ -192,30 +192,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f1dca07e",
+   "execution_count": 4,
+   "id": "e4ed7afc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the capital of spain is madrid\n",
+      "the capital of france is paris\n",
+      "the capital of germany is berlin\n",
+      "the capital of norway is oslo\n",
+      "the capital of italy is rome\n",
+      "the capital of poland is warsaw\n",
+      "the capital of austria is vienna\n"
+     ]
+    }
+   ],
    "source": [
-    "# for loop with DataFrame 1\n",
-    "\n"
+    "# for loop with Dictionaries - Use \"items\" method my_dict.items()\n",
+    "\n",
+    "# Definition of dictionary\n",
+    "europe = {'spain':'madrid', 'france':'paris', 'germany':'berlin',\n",
+    "          'norway':'oslo', 'italy':'rome', 'poland':'warsaw', 'austria':'vienna' }\n",
+    "          \n",
+    "# Iterate over europe (using key, value - it can be any name ex: k, v)\n",
+    "for x, y in europe.items() :\n",
+    "    print(\"the capital of \" + x + \" is \" + y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c4f50a46",
+   "execution_count": 13,
+   "id": "d3b6fe4d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "height is 1.73 inches\n",
+      "height is 1.68 inches\n",
+      "height is 1.71 inches\n",
+      "height is 1.89 inches\n",
+      "height is 1.79 inches\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop with Numpy Array - Use function from Numpy np.nditer(2d_np_array)\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "np_height = np.array([1.73, 1.68, 1.71, 1.89, 1.79])\n",
+    "np_weight = np.array([65.4, 59.2, 63.6, 88.4, 68.7])\n",
+    "\n",
+    "# For loop over np_height\n",
+    "for x in np.nditer(np_height) :\n",
+    "    print(\"height is \" + str(x) + \" inches\")\n",
+    "\n",
+    "# For loop over np_baseball\n",
+    "#for y in np.nditer(np_baseball) :\n",
+    "#    print(y)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cc1a8e7d",
+   "execution_count": 16,
+   "id": "3db0f3bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country\n",
+      "capital\n",
+      "area\n",
+      "population\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop with DataFrame - Use default for loop\n",
+    "\n",
+    "import pandas as pd\n",
+    "brics = pd.read_csv(\"C:/Users/Neu/Documents/GitHub/Python/Practice-2024/Datasets/brics.csv\", index_col=0)\n",
+    "for val in brics :\n",
+    "    print(val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8b842b61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BR\n",
+      "country         Brazil\n",
+      "capital       Brasilia\n",
+      "area             8.516\n",
+      "population       200.4\n",
+      "Name: BR, dtype: object\n",
+      "RU\n",
+      "country       Russia\n",
+      "capital       Moscow\n",
+      "area            17.1\n",
+      "population     143.5\n",
+      "Name: RU, dtype: object\n",
+      "IN\n",
+      "country           India\n",
+      "capital       New Delhi\n",
+      "area              3.286\n",
+      "population       1252.0\n",
+      "Name: IN, dtype: object\n",
+      "CH\n",
+      "country         China\n",
+      "capital       Beijing\n",
+      "area            9.597\n",
+      "population     1357.0\n",
+      "Name: CH, dtype: object\n",
+      "SA\n",
+      "country       South Africa\n",
+      "capital           Pretoria\n",
+      "area                 1.221\n",
+      "population           52.98\n",
+      "Name: SA, dtype: object\n",
+      "nan\n",
+      "country       NaN\n",
+      "capital       NaN\n",
+      "area          NaN\n",
+      "population    NaN\n",
+      "Name: nan, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop with DataFrame - Using \"iterrows\" method generates laebl and row for each iteration\n",
+    "\n",
+    "import pandas as pd\n",
+    "brics = pd.read_csv(\"C:/Users/Neu/Documents/GitHub/Python/Practice-2024/Datasets/brics.csv\", index_col=0)\n",
+    "for label, row in brics.iterrows() :\n",
+    "    print(label)\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "68729925",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BR: Brasilia\n",
+      "RU: Moscow\n",
+      "IN: New Delhi\n",
+      "CH: Beijing\n",
+      "SA: Pretoria\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'float' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [24]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m brics \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/Neu/Documents/GitHub/Python/Practice-2024/Datasets/brics.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m label, row \u001b[38;5;129;01min\u001b[39;00m brics\u001b[38;5;241m.\u001b[39miterrows() :\n\u001b[1;32m----> 7\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mlabel\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m \u001b[38;5;241m+\u001b[39m row[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcapital\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'float' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop with DataFrame - To print \"selectively\"\n",
+    "\n",
+    "import pandas as pd\n",
+    "brics = pd.read_csv(\"C:/Users/Neu/Documents/GitHub/Python/Practice-2024/Datasets/brics.csv\", index_col=0)\n",
+    "\n",
+    "for label, row in brics.iterrows() :\n",
+    "    print(label + \": \" + row[\"capital\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7f906931",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          country    capital    area  population  name_length\n",
+      "BR         Brazil   Brasilia   8.516      200.40          8.0\n",
+      "RU         Russia     Moscow  17.100      143.50          NaN\n",
+      "IN          India  New Delhi   3.286     1252.00          NaN\n",
+      "CH          China    Beijing   9.597     1357.00          NaN\n",
+      "SA   South Africa   Pretoria   1.221       52.98          NaN\n",
+      "NaN           NaN        NaN     NaN         NaN          NaN\n",
+      "          country    capital    area  population  name_length\n",
+      "BR         Brazil   Brasilia   8.516      200.40          8.0\n",
+      "RU         Russia     Moscow  17.100      143.50          6.0\n",
+      "IN          India  New Delhi   3.286     1252.00          NaN\n",
+      "CH          China    Beijing   9.597     1357.00          NaN\n",
+      "SA   South Africa   Pretoria   1.221       52.98          NaN\n",
+      "NaN           NaN        NaN     NaN         NaN          NaN\n",
+      "          country    capital    area  population  name_length\n",
+      "BR         Brazil   Brasilia   8.516      200.40          8.0\n",
+      "RU         Russia     Moscow  17.100      143.50          6.0\n",
+      "IN          India  New Delhi   3.286     1252.00          9.0\n",
+      "CH          China    Beijing   9.597     1357.00          NaN\n",
+      "SA   South Africa   Pretoria   1.221       52.98          NaN\n",
+      "NaN           NaN        NaN     NaN         NaN          NaN\n",
+      "          country    capital    area  population  name_length\n",
+      "BR         Brazil   Brasilia   8.516      200.40          8.0\n",
+      "RU         Russia     Moscow  17.100      143.50          6.0\n",
+      "IN          India  New Delhi   3.286     1252.00          9.0\n",
+      "CH          China    Beijing   9.597     1357.00          7.0\n",
+      "SA   South Africa   Pretoria   1.221       52.98          NaN\n",
+      "NaN           NaN        NaN     NaN         NaN          NaN\n",
+      "          country    capital    area  population  name_length\n",
+      "BR         Brazil   Brasilia   8.516      200.40          8.0\n",
+      "RU         Russia     Moscow  17.100      143.50          6.0\n",
+      "IN          India  New Delhi   3.286     1252.00          9.0\n",
+      "CH          China    Beijing   9.597     1357.00          7.0\n",
+      "SA   South Africa   Pretoria   1.221       52.98          8.0\n",
+      "NaN           NaN        NaN     NaN         NaN          NaN\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'float' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [26]\u001b[0m, in \u001b[0;36m<cell line: 6>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m brics \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/Neu/Documents/GitHub/Python/Practice-2024/Datasets/brics.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m, index_col\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m label, row \u001b[38;5;129;01min\u001b[39;00m brics\u001b[38;5;241m.\u001b[39miterrows() :\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m#creating Series on every iteration\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m     brics\u001b[38;5;241m.\u001b[39mloc[label, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname_length\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mcapital\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m     \u001b[38;5;28mprint\u001b[39m(brics)\n",
+      "\u001b[1;31mTypeError\u001b[0m: object of type 'float' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "# for loop with DataFrame - Adding New Columns in a DF\n",
+    "\n",
+    "import pandas as pd\n",
+    "brics = pd.read_csv(\"C:/Users/Neu/Documents/GitHub/Python/Practice-2024/Datasets/brics.csv\", index_col=0)\n",
+    "\n",
+    "for label, row in brics.iterrows() :\n",
+    "    #creating Series on every iteration\n",
+    "    brics.loc[label, \"name_length\"] = len(row[\"capital\"])\n",
+    "    print(brics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "9ce81e2e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# for loop with DataFrame - Using \"apply\" function to calculate a column values in a DF - no need for loop\n",
+    "\n",
+    "#import pandas as pd\n",
+    "#brics = pd.read_csv(\"C:/Users/Neu/Documents/GitHub/Python/Practice-2024/Datasets/brics.csv\", index_col=0)\n",
+    "\n",
+    "#brics[\"name_length\"] = brics[\"country\"].apply(len)\n",
+    "#print(brics)"
+   ]
   },
   {
    "cell_type": "markdown",
